--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
         <div class="container">
             <p>Location: Rukidi 3 Street , Kabarole District</p>
             <p>&copy; 2024 Youth Of Tooro SACCO Web Template . All rights reserved.</p>
-            <p>Powered by <a href="https://wa.me/" target="_blank">Youth Of Tooro </a> | Developed by <a href="https://wa.me/+256756181566" target="_blank">Youth Of Tooro  Whatsapp</a></p>
+            <p>Powered by <a href="https://wa.me/" target="_blank">Youth Of Tooro </a> </p>
+               <p></p> Developed by <a href="https://wa.me/+256756181566" target="_blank">Youth Of Tooro  Whatsapp</a></p>
         </div>
     </footer>
 </body>
