--- a/mobile.html
+++ b/mobile.html
@@ -59,7 +59,8 @@
         <div class="container">
             <p>Location: P.O. Box 100, Rukidi 3 Street, Fort Portal</p>
             <p>&copy; 2024 Youth Of Tooro. All rights reserved.</p>
-            <p>Powered by <a href="https://wa.me/+256779491167" target="_blank"> Youth Of  Tooro </a> | Developed by <a href="https://wa.me/+256779491167" target="_blank">Youth Of Tooro </a></p>
+            <p>Powered by <a href="https://wa.me/+256779491167" target="_blank"> Youth Of  Tooro </a> </p>
+           <p> Developed by <a href="https://wa.me/+256779491167" target="_blank">Youth Of Tooro </a></p>
         </div>
     </footer>
 </body>
