--- a/loans.html
+++ b/loans.html
@@ -18,6 +18,7 @@
                         <a href="about.html">About Us</a>
                         <a href="savings.html">Savings Products</a>
                         <a href="service-centers.html">Service Centers</a>
+                        <a href="gallery.html">sacco images</a>
                         
                         <a href="mobile.html">Mobile Transactions</a>
                         <a href="contact.html">Contact Us</a>
