--- a/mobile.html
+++ b/mobile.html
@@ -17,6 +17,7 @@
                         <a href="index.html">Home</a>
                         <a href="savings.html">Savings Products</a>
                         <a href="loans.html">Loan Products</a>
+                        <a href="gallery.html">sacco images</a>
                        
                         <a href="mobile.html">Mobile Transactions</a>
                         <a href="contact.html">Contact Us</a>
