--- a/service-centers.html
+++ b/service-centers.html
@@ -18,7 +18,7 @@
                         <a href="about.html">About Us</a>
                         <a href="savings.html">Savings Products</a>
                         <a href="loans.html">Loan Products</a>
-                       
+                       <a href="gallery.html">sacco images</a>
                         <a href="mobile.html">Mobile Transactions</a>
                         <a href="contact.html">Contact Us</a>
                     </div>
